Fixed squashed image in mobile version

--- a/styles/main.css
+++ b/styles/main.css
@@ -135,7 +135,8 @@ footer {
   margin-right: 1rem;
   border-radius: 20px;
   width: 200px;
-  height: 200px;
+  height: auto;
+  object-fit: cover;
 }
 .publication {
   display: flex;
